@@ -1,3 +1,8 @@
+Mon Nov 26 03:02:03 GMT 2012  Olly Betts <olly@survex.com>
+
+	* api/valuerangeproc.cc: Move 3 declarations to where we first use the
+	  variables.
+
 Mon Nov 26 02:59:41 GMT 2012  Olly Betts <olly@survex.com>
 
 	* matcher/multimatch.cc: We no longer use the highest weighted
